--- a/info.plist
+++ b/info.plist
@@ -27,7 +27,7 @@
     <key>disabled</key>
     <false/>
     <key>name</key>
-    <string>AWS Console Services v1.0</string>
+    <string>AWS Console Services</string>
     <key>objects</key>
     <array>
       <dict>
@@ -97,7 +97,7 @@
       </dict>
     </dict>
     <key>version</key>
-    <string>1.0</string>
+    <string>1.1</string>
     <key>webaddress</key>
     <string>https://ryankoval.com</string>
   </dict>
