--- a/src/console-services.yml
+++ b/src/console-services.yml
@@ -19,6 +19,10 @@
   description: 'Batch - Fully Managed Batch Processing at Any Scale'
   url: 'https://console.aws.amazon.com/batch/home'
 
+- command: billing
+  description: 'Billing - Billing & Cost Management'
+  url: 'https://console.aws.amazon.com/billing/home'
+
 - command: catalog
   description: 'Service Catalog - Create and Use Standardized Products'
   url: 'https://console.aws.amazon.com/catalog/home'
