--- a/src/console-services.yml
+++ b/src/console-services.yml
@@ -302,3 +302,67 @@
 - command: servicecatalog
   description: 'Create and use standardised products'
   url: 'https://console.aws.amazon.com/servicecatalog/home'
+
+- command: comprehend
+  description: 'Analyse unstructured text'
+  url: 'https://console.aws.amazon.com/comprehend/home'
+
+- command: deeplens
+  description: 'Deep learning enabled video camera'
+  url: 'https://console.aws.amazon.com/deeplens/home'
+
+- command: eks
+  description: 'Managed Kubernetes on AWS'
+  url: 'https://console.aws.amazon.com/eks/home'
+
+- command: freertos
+  description: 'FreeRTOS IoT operating system for microcontrollers'
+  url: 'https://console.aws.amazon.com/freertos/home'
+
+- command: guardduty
+  description: 'Intelligent thread detection for '
+  url: 'https://console.aws.amazon.com/guardduty/home'
+
+- command: managedservices
+  description: 'IT oeprations management for AWS'
+  url: 'https://console.aws.amazon.com/managedservices/home'
+
+- command: mq
+  description: 'Managed message broker service for Apache ActiveMQ'
+  url: 'https://console.aws.amazon.com/amazon-mq/home'
+
+- command: migrationhub
+  description: 'Simplify and accelerate the migration of your data centers to AWS'
+  url: 'https://console.aws.amazon.com/migrationhub/home'
+
+- command: neptune
+  description: 'Fast, reliable graph database built for the cloud'
+  url: 'https://console.aws.amazon.com/neptune/home'
+
+- command: sagemaker
+  description: 'Build, Train, and Deploy Machine Learning Models'
+  url: 'https://console.aws.amazon.com/sagemaker/home'
+
+- command: secretsmanager
+  description: 'Easily rotate, manage, and retrieve secrets throughout their lifecycle'
+  url: 'https://console.aws.amazon.com/secretsmanager/home'
+
+- command: systemsmanager
+  description: 'Central place to view and manage AWS resources'
+  url: 'https://console.aws.amazon.com/systems-manager/home'
+
+- command: transcribe
+  description: 'Powerful speech recognition'
+  url: 'https://console.aws.amazon.com/transcribe/home'
+
+- command: translate
+  description: 'Translate text in real-time'
+  url: 'https://console.aws.amazon.com/translate/home'
+
+- command: sumerian
+  description: 'Build VR, AR, and 3D applications'
+  url: 'https://console.aws.amazon.com/sumerian/home'
+
+- command: singlesignon
+  description: 'Manage SSO Access to AWS accounts and business applications'
+  url: 'https://console.aws.amazon.com/singlesignon/home'
