--- a/console-services.yml
+++ b/console-services.yml
@@ -542,6 +542,46 @@
   short_name: RDS
   description: Managed Relational Database Service
   url: https://console.aws.amazon.com/rds/home
+  sections:
+    - id: databases
+      name: Databases
+      url: "https://console.aws.amazon.com/rds/home#databases:"
+    - id: query-editor
+      name: Query Editor
+      url: "https://console.aws.amazon.com/rds/home#query-editor:"
+    - id: performance-insights
+      name: Performance Insights
+      url: "https://console.aws.amazon.com/rds/home#performance-insights-v20206:"
+    - id: snapshots
+      name: Snapshots
+      url: "https://console.aws.amazon.com/rds/home#snapshots-list:"
+    - id: automated-backups
+      name: Automated backups
+      url: "https://console.aws.amazon.com/rds/home#automatedbackups:"
+    - id: reserved-instances
+      name: Reserved instances
+      url: "https://console.aws.amazon.com/rds/home#reserved-instance-list:"
+    - id: proxies
+      name: Proxies
+      url: "https://console.aws.amazon.com/rds/home#proxies:"
+    - id: subnet-groups
+      name: Subnet groups
+      url: "https://console.aws.amazon.com/rds/home#db-subnet-groups-list:"
+    - id: option-groups
+      name: Option groups
+      url: "https://console.aws.amazon.com/rds/home#option-groups-list:"
+    - id: events
+      name: Events
+      url: "https://console.aws.amazon.com/rds/home#event-list:"
+    - id: event-subscriptions
+      name: Event subscriptions
+      url: "https://console.aws.amazon.com/rds/home#event-subscriptions:"
+    - id: recommendations
+      name: Recommendations
+      url: "https://console.aws.amazon.com/rds/home#recommendations:"
+    - id: certificate-update
+      name: Certificate update
+      url: "https://console.aws.amazon.com/rds/home#ca-cert-update:"
 
 - id: redshift
   name: Redshift
