--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: golangci-lint
+name: main
 on:
   push:
     tags:
@@ -8,8 +8,8 @@ on:
       - v3.x
   pull_request:
 jobs:
-  golangci:
-    name: lint
+  lint:
+    name: golangci-lint
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
