--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,25 +13,22 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v1
+      - uses: actions/setup-go@v2
         with:
-          # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
-          version: v1.28
-
-          # Optional: working directory, useful for monorepos
-          # working-directory: somedir
-
-          # Optional: golangci-lint command line arguments.
-          # args: --issues-exit-code=0
-
-          # Optional: show only new issues if it's a pull request. The default value is `false`.
-          # only-new-issues: true
+          go-version: '1.14.0'
+      - run: ./build.sh
+      - name: golangci-lint
+        run: |
+          go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.28.3
+          golangci-lint run
   test:
     name: go test
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.14.0'
       - name: Cache go.sum dependencies
         uses: actions/cache@v2
         with:
