fixed workflow on alfred 4

--- a/info.plist
+++ b/info.plist
@@ -107,7 +107,7 @@
 				<key>argumenttype</key>
 				<integer>0</integer>
 				<key>escaping</key>
-				<integer>102</integer>
+				<integer>118</integer>
 				<key>keyword</key>
 				<string>aws</string>
 				<key>queuedelaycustom</key>
@@ -121,9 +121,9 @@
 				<key>runningsubtext</key>
 				<string></string>
 				<key>script</key>
-				<string>./alfred-aws-console-services-workflow -query "$1"</string>
+				<string>./alfred-aws-console-services-workflow -query "{query}"</string>
 				<key>scriptargtype</key>
-				<integer>1</integer>
+				<integer>0</integer>
 				<key>scriptfile</key>
 				<string></string>
 				<key>subtext</key>
